<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Global -->
    <string name="app_name">The Jumplings</string>
    <string name="lorem">Lorem ipsum</string>
    
    <!-- Navigation -->
    <string name="nav_exit">Exit</string>
    <string name="nav_test">Test</string>
    <string name="nav_ok">OK</string>
    <string name="nav_share">Share</string>
    <string name="nav_play_again">Play again</string>
    <string name="nav_menu">Menu</string>
    <string name="nav_back">Back</string>
    <string name="nav_proceed">Proceed</string>
    
    
    <!-- Splash Activity -->
    <string name="splash_developer">Sergio Megaherzio</string>
    <string name="splash_presents">presents</string>
    
    <!-- Menu Activity -->
    <string name="purchaseDlg_message_big">Go premium!</string>
    <string name="purchaseDlg_message_small">Do you want to buy the game and get rid of the ads?</string>
    <string name="purchaseDlg_no">No</string>
    <string name="purchaseDlg_yes">Yes :-)</string>
    <string name="menu_share">"I'm playing The Jumplings and it's fun!. Download it for free at http://play.google.com/store/apps/details?id=com.garrapeta.jumplings"</string>
    
	<!-- About Activity -->
    <string name="about_subtitle">by Sergio Megaherzio</string>
    <string name="about_howto_title">How to play</string>
    <string name="about_howto_1">Tap the Jumplings before they fall from the bottom of the screen. Don\'t let them fall, or you\'ll lose one life.</string>
    <string name="about_howto_2">Kill the Jumplings very quickly one after the other to score combos and gain extra points.</string>
    <string name="about_howto_red">Red Jumplings are cute</string>
    <string name="about_howto_orange">Orange ones last two taps</string>
    <string name="about_howto_yellow">The yellow ones split when you tap on them</string>
    <string name="about_howto_bomb">Do not explode the bombs. That is obvious&#8230;</string>
    <string name="about_howto_lifeup">Extra life power up!</string>
    <string name="about_howto_sable">Ninja sable powerup. When you got it you can swipe through the screen to kill them faster. Lasts only for some seconds.</string>
    <string name="about_scores_title">About High Scores</string>
    <string name="about_scores_1">As the difficulty level of the game varies depending on the size of the screen, there are different score tables to reflect that. Thus, you may experience that the highscore that you submitted from your tablet is not seen in the high scores screen of your phone.</string>
    <string name="about_credits_title">Credits</string>
    <string name="about_credits_1">Code and design by</string>
    <string name="about_credits_2">Sergio GaRRaPeTa Megaherzio</string>
    <string name="about_credits_3">2011 - 2013</string>
    <string name="about_credits_4">Plymouth and London</string>
    <string name="about_credits_linkedin_profile">http://uk.linkedin.com/in/sergiotorresperez</string>
    <string name="about_credits_5">Source code:</string>
    <string name="about_credits_source_repository">http://bitbucket.org/garrapeta/</string>
    <string name="about_ack_title">Acknowledgements</string>
    <string name="about_ack_1">The game integrates the adaptation of Box2D for Android made by Badlogic</string>
    <string name="about_ack_2">https://github.com/libgdx/libgdx</string>
    <string name="about_ack_3">Some sound samples and bitmaps were taken from the free source game Teeworlds and heavily modified.</string>
    <string name="about_ack_4">https://www.teeworlds.com</string>
    <string name="about_ack_5">AnuDaw font by Nyek! fonts</string>
    <string name="about_ack_6">\@nyekfonts</string>
    <string name="about_ack_7">GF Grunge sans font by ShyFonts Type Foundry</string>
    <string name="about_ack_8">http://www.shyfonts.com</string>
    <string name="about_copyright">© 2013 Sergio Torres Pérez</string>

    <!-- Game Over activity -->
    <string name="gameover_name">Your name: </string>
    <string name="gameover_view_high_scores">View high scores</string>
    <string name="gameover_your_score">Your score: %1$d</string>
    <string name="gameover_beaten">You\'ve beaten the high score!</string>
    <string name="gameover_highscore_is">"High score is %1$d"</string>
    <string name="gameover_share">"I've achieved %1$d points in The Jumplings!. Download it for free at http://play.google.com/store/apps/details?id=com.garrapeta.jumplings"</string>
    <string name="gameover_invalid_username">"Enter a name at least %1$d characters long"</string>

    <!-- High scores activity -->
    <string name="highscores_submit">Submit</string>
    <string name="highscores_clear">Clear</string>
    <string name="highscores_header_number">#.</string>
    <string name="highscores_header_player_name">Player Name</string>
    <string name="highscores_header_global_rank">Global Rank</string>
    <string name="highscores_header_level">Level</string>
    <string name="highscores_header_score">Score</string>
    <string name="highscores_local_scores">Local scores</string>
    <string name="highscores_global_scores">Global scores</string>
    <string name="highscores_submit_score_ok">Scores submitted</string>
    <string name="highscores_error_download_score">Could not download scores</string>
    <string name="highscores_error_submit_score">Could not submit scores</string>
    <string name="highscores_error_no_connection">You need to be connected to the Internet</string>
    <string name="highscores_error_io_error">Error communicating with the score server.</string>
    <string name="highscores_error_server_error">Something wrong happened in the server&#8230;</string>
    
    <!-- Preferences activity -->
    <string name="prefs_sound_summary">Enable or disable sound</string>
    <string name="prefs_sound_title">Enable sound</string>
    <string name="prefs_vibration_summary">Define the level of the vibration effects</string>
    <string name="prefs_vibration_title">Vibration level</string>    
    <string name="prefs_flash_summary">Define the level of the flash effect</string>
    <string name="prefs_flash_title">Flash effect level</string>  
    <string name="prefs_shake_summary">Define the level of the screen shake effect</string>
    <string name="prefs_shake_title">Screen shake effect level</string>
    <string name="prefs_ads_summary">Enable or disable ads (if not premium)</string>
    <string name="prefs_ads_title">Enable ads</string>
    <string name="prefs_paint_bitmaps_summary">Paint ot not the bitmaps of the Jumplings</string>
    <string name="prefs_paint_bitmaps_title">Paint bitmaps</string>
    <string name="prefs_wireframe_mode_summary">Paint the shapes of the actors and the grid of world</string>
    <string name="prefs_wireframe_mode_title">Wireframe mode</string>
    <string name="prefs_debug_features_summary">Enable debug buttons and other debug features</string>
    <string name="prefs_debug_features_title">Debug features</string>
    <string name="prefs_thread_bars_summary">Show the thread bars</string>
    <string name="prefs_thread_bars_title">Thread bars</string>
    <string name="prefs_autoplay_summary">Automatically kill the jumplings</string>
    <string name="prefs_autoplay_title">AutoPlay</string>
    <string name="prefs_server_url_summary">Sets the url of the scores server</string>
    <string name="prefs_server_url_title">Scores server url</string>
                          
    <!-- In game text -->
    <string name="game_over">Game Over</string>
    <string name="game_paused">Game Paused</string>
    <string name="game_menu">Main Menu</string>
    <string name="game_resume">Resume</string>
    <string name="game_error_title">Kataboom!</string> 
    <string name="game_error">Sorry, something wrong has happened :-(</string> 
    <string name="game_ad_dlg_continue">Play</string> 
    <string name="game_ad_dlg_continue_in_secs">Play (%1$d)</string> 
    <string name="game_ad_dlg_buy">Get rid of ads</string> 
    <string name="game_loading">Loading&#8230;</string>
    <string name="game_highscore">Highscore: %1$d</string>
    <string name="game_level">Level %1$d</string>
    <string name="game_combo">%1$d x combo!</string>
    
    <!-- Tutorial tips -->
    <string name="tip_enemy_escaped">If you let the Jumplings escape from the lower edge of the screen you\'ll lose a life! As this was the first time we let it pass&#8230;</string>
    <string name="tip_combo">If you kill Jumplings very quickly you score a combo!</string>
    <string name="tip_round_enemy_killed">That\'s it, tap on the Jumplings before they fall from the lower bottom of the screen.</string>
    <string name="tip_double_enemy_killed">Careful with the orange ones, they need two taps to be killed.</string>
    <string name="tip_splitter_enemy_killed">The yellow ones split when you tap on them!</string>
    <string name="tip_bomb_exploded">Bombs are not meant to be tapped! Not this time, but next you\'ll lose a life.</string>
    <string name="tip_life_power_up">Extra life!</string>
    <string name="tip_sword_power_up_start">You\'ve got the sword! Swipe through the screen to use it&#8230; and be careful, it will only last for a few seconds!</string>
    <string name="tip_sword_power_up_end">The sword is over&#8230; now tap on them, us usual&#8230;</string>
    

</resources>
