<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainFont.ScoreListHeaderLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="10dp"
    android:paddingLeft="@dimen/highscores_activity_list_padding"
    android:paddingRight="@dimen/highscores_activity_list_padding"
    android:paddingTop="10dp" >

    <com.garrapeta.jumplings.view.CustomFontTextView
        android:id="@+id/scoreHeader_index"
        style="@style/MainFont.ScoreListHeaderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/highscores_header_number" />

    <com.garrapeta.jumplings.view.CustomFontTextView
        android:id="@+id/scoreHeader_playerName"
        style="@style/MainFont.ScoreListHeaderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/highscores_header_player_name" />

    <com.garrapeta.jumplings.view.CustomFontTextView
        android:id="@+id/scoreHeader_level"
        style="@style/MainFont.ScoreListHeaderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="right"
        android:text="@string/highscores_header_level" />

    <com.garrapeta.jumplings.view.CustomFontTextView
        android:id="@+id/scoreHeader_score"
        style="@style/MainFont.ScoreListHeaderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="right"
        android:text="@string/highscores_header_score" />

</LinearLayout>